Top button, navbar indicator

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     
 <body>
 
+    
+
     <!-- Container for Content -->
     <div class="container">
         <!-- Navbar for Desktop -->
@@ -44,12 +46,16 @@
                 <li><a href="#research">Research Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#work">Work Experience</a></li>
-                <li><a href="#honors">Honors and Awards</a></li>
-                <li><a href="#leadership">Leadership</a></li>
                 <li><a href="#references">References</a></li>
             </ul>
         </nav>
+
+
+
+
+        <!-- Scroll-to-Top Button -->
+        <button id="scrollToTopBtn" title="Go to top">↑</button>
+
 
         <!-- Main Content -->
         <div class="content">
