--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li><a href="#research">Research Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#education">Education</a></li>
-                <!-- <li><a href="#highlights">Personal Highlights</a></li> -->
+                <li><a href="#highlights">Personal Highlights</a></li>
                 <li><a href="#references">References</a></li>
             </ul>
         </nav>
