--- a/personal_highlights/highlights.html
+++ b/personal_highlights/highlights.html
@@ -40,6 +40,25 @@
 
 
 
+        <!-- Mobile Menu Button -->
+        <div class="mobile-menu-button" id="mobile-menu-button">
+            ☰
+        </div>
+
+        <!-- Mobile Navbar -->
+        <nav class="mobile-navbar" id="mobile-navbar">
+            <ul>
+                <li><a href="#academic">Academic</a></li>
+                <li><a href="#leadership">Leadership</a></li>
+                <li><a href="#music">Music</a></li>
+                <li><a href="#hobbies">Passions</a></li>
+                <li><a href="../index.html">Go to Home</a></li>
+            </ul>
+        </nav>
+
+
+
+
 
         <!-- Scroll-to-Top Button -->
         <button id="scrollToTopBtn" title="Go to top">↑</button>
