--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
 
             <section id="highlights">
-                <h2>Personal Highlights</h2>
+                <h2>Beyond Academics</h2>
                 <p>
                     See my achievements and activities, including academic accomplishments, leadership roles, music career, and creative passions. 
                     
