--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
                 </p>
 
                 <p>
-                    Currently, I am exploring Security in AI, focusing on improving the vulnerabilities of large language models to adversarial attacks. 
                     I have worked on several interesting projects, including detecting road pavement damage using YOLO-based CNN models, sentiment analysis through Natural Language Processing techniques, and implementing neural network algorithms from scratch.
                     
                 </p>
@@ -144,7 +143,7 @@
                     <li>Large Language Models (LLMs)</li>
                     <li>Multimodal AI</li>
                     <li>Human-Computer Interaction</li>
-                    <li>Security in AI</li>
+                    <!-- <li>Security in AI</li> -->
                     <li>Brain-computer interface</li>
                     <li>Explainable AI</li>
                 </ul>
